# slint-world

./: .gitignore
my-project/: Cargo.toml  README.md
my-project/src/: lib.rs  main.rs
sysinfo/: CLAUDE.md  Cargo.toml  README.md  manifest.yaml
sysinfo/src/: lib.rs  main.rs
sysinfo/ui/: app-window.slint
